Added voice recognition

--- a/Hololens-SurgeryApp/MSBuildForUnity.Common.props
+++ b/Hololens-SurgeryApp/MSBuildForUnity.Common.props
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <MSBuildForUnityVersion>0.8.3</MSBuildForUnityVersion>
     
-    <MSBuildForUnityGeneratedOutputDirectory>C:\Users\amoor\Documents\GitHub\PPIT-Project-Repo\Hololens-SurgeryApp\MSBuild\Projects</MSBuildForUnityGeneratedOutputDirectory>
-    <UnityProjectAssetsPath>C:\Users\amoor\Documents\GitHub\PPIT-Project-Repo\Hololens-SurgeryApp\Assets</UnityProjectAssetsPath>
+    <MSBuildForUnityGeneratedOutputDirectory>D:\ProgrammingWork\Sem_6\PPIT-Project-Eoin\Hololens-SurgeryApp\MSBuild\Projects</MSBuildForUnityGeneratedOutputDirectory>
+    <UnityProjectAssetsPath>D:\ProgrammingWork\Sem_6\PPIT-Project-Eoin\Hololens-SurgeryApp\Assets</UnityProjectAssetsPath>
     <MSBuildForUnityDefaultOutputPath>$(UnityProjectAssetsPath)\Dependencies</MSBuildForUnityDefaultOutputPath>
     
     <UnityCurrentPlatform>WSA</UnityCurrentPlatform>
